commit for linux workstation

--- a/practice2.html
+++ b/practice2.html
@@ -8,8 +8,16 @@
                 border-width: 5px;
             }
         </style>
+        <link href="styles.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
+        <div id="banner">
+            <li><a id="home" href="index.html">Home</a></li>
+            <li><a href="practice1.html">Practice1</a></li>
+            <li><a href="practice2.html">Practice2</a></li>
+            <li><a href="practice3.html">Practice3</a></li>
+            <li><a href="practice4.html">Practice4</a></li>
+        </div>
         <div id="paragraph">Paragraph to be altered.</div>
         <script type="text/javascript" src="script.js"></script>
         "Border R(0-255)"
