--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
     <title>Caleb Neil | KU EECS</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body id="background">
+<body>
     <div id="banner">
+        <li><a id="home" href="index.html">Home</a></li>
         <li><a href="practice1.html">Practice1</a></li>
         <li><a href="practice2.html">Practice2</a></li>
         <li><a href="practice3.html">Practice3</a></li>
         <li><a href="practice4.html">Practice4</a></li>
     </div>
+    <h1>Caleb Neil Home Page</h1>
+    <img id="big-jay" src="pictures/big_jay_background.jpeg"></img>
     <script src="script.js"></script>
 </body>
