--- a/practice1.html
+++ b/practice1.html
@@ -2,9 +2,16 @@
 <html>
     <head>
         <h1>Practice 1</h1>
+        <link href="styles.css" rel="stylesheet" type="text/css" />
     </head>
     <body id="punkin">
-        <link href="styles.css" rel="stylesheet" type="text/css" />
+        <div id="banner">
+            <li><a id="home" href="index.html">Home</a></li>
+            <li><a href="practice1.html">Practice1</a></li>
+            <li><a href="practice2.html">Practice2</a></li>
+            <li><a href="practice3.html">Practice3</a></li>
+            <li><a href="practice4.html">Practice4</a></li>
+        </div>
 
         <img id="picture" , src="pictures/0.jpeg">
         The picture we need! <br>
