--- a/practice4.html
+++ b/practice4.html
@@ -2,8 +2,16 @@
 <html>
 <head>
     Practice 4
+    <link href="styles.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+    <div id="banner">
+        <li><a id="home" href="index.html">Home</a></li>
+        <li><a href="practice1.html">Practice1</a></li>
+        <li><a href="practice2.html">Practice2</a></li>
+        <li><a href="practice3.html">Practice3</a></li>
+        <li><a href="practice4.html">Practice4</a></li>
+    </div>
     <form action="practice4.php" method="post">
         Size of the multiplication table: <input type="text" name="size"><br>
         <input type="submit">
